--- a/_data/social.yml
+++ b/_data/social.yml
@@ -16,13 +16,13 @@ reddit:
 soundcloud:
 stack_overflow:
 stack_exchange:
-steam:
+steam: FairlyOddPanda
 tumblr:
-twitter:
+twitter: FairlyPanda
 vimeo:
 wordpress:
 youtube: # Youtube channel token like: UCqECaJ8Gagnn7YCbPEzWH6g
-twitch: sirrandoo
+twitch: FairlyOddPanda
 tiktok:
 
 # Share button options
